feat: Enhance agent management and add voice chat session creation - Updated metrics in get_agents_list function to use string values for costs - Added synthetic person chat agent to the agent list - Introduced new FastAPI endpoint for testing synthetic person chat agent - Implemented create_realtime_session function for voice chat integration - Updated requirements to include websockets

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ fastapi
 uvicorn[standard]
 sqlmodel
 python-multipart
+websockets
 
 # Azure Storage SDKs
 azure-storage-blob==12.19.0
@@ -25,5 +26,11 @@ python-dotenv
 
 # Async utilities
 nest-asyncio
+
+# Voice Chat and WebRTC dependencies
+openai>=1.0.0
+numpy
+wave
+aiortc  # For advanced WebRTC support (optional)
 
 
