--- a/.github/workflows/main_mirai-lms-api.yml
+++ b/.github/workflows/main_mirai-lms-api.yml
@@ -45,27 +45,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: python-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E90934B0378C4E72B30744F3A7A9BA00 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D6B624F90CC64703816285FC72FF3C5D }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F81625E4C7E34264B3A12789AF73D442 }}
-
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'mirai-lms-api'
           slot-name: 'Production'
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9AB6B2DF932E41BD970B347C72F88F0E }}
